# wikilytics

./: .gitignore  Cargo.toml
.github/workflows/: analyzer.yml
analyzer/: Cargo.toml
analyzer/src/: analyze.rs  common.rs  main.rs  network.rs  resolve.rs  wikitext.rs
analyzer/src/network_generator/: mod.rs  wiki_text.rs  wiki_xml_dump.rs
analyzer/src/statistics/: mod.rs
src/: main.rs  wiki_pages.rs  wiki_text.rs
src/network_generator/: mod.rs  wiki_pages.rs  wiki_text.rs
src/statistics/: mod.rs  summary.rs
viewer/: index.html  package-lock.json  package.json
viewer/public/: statistics.json
viewer/src/: App.tsx  api.ts  urls.ts
viewer/src/components/: degreeChart.tsx  summary.tsx
