[package]
name = "wikilytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4"
clap = { version ="4.5.0", features = ["cargo"] }
quick-xml = "0.31.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
